# SuperBirdTools

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  README.md  build_all.bat  build_all.sh  build_all_win_merged.spec  init_dev.py  init_dev.sh  run.bat  run.sh
SuperBirdStamp/: .gitignore  AGENTS.md  BirdStamp_mac.spec  BirdStamp_mac_console.spec  BirdStamp_win.spec  README.md  SuperViewerUser.cfg  __init__.py  about.cfg  build_win.bat  entry.py  init_dev.py  main.py  pyproject.toml  requirements.txt  run_console.sh
SuperBirdStamp/birdstamp/: __main__.py  cli.py  config.py  constants.py  dejitter.py  discover.py  export_frame_cache.py  gif_export.py  image_pipeline.py  models.py  naming.py  perf.py  subprocess_utils.py  video_export.py  workspace.py
SuperBirdStamp/config/: birdstamp.cfg  editor_autosave.birdstamp-workspace.json  editor_export_state.json  editor_options.json  template_context_routes.json
SuperBirdStamp/docs/: review_9grid_crop_and_free_ratio.md
SuperBirdStamp/icons/: app_icon.icns
SuperBirdStamp/scripts_dev/: AI_RULES_SETUP.md  build_app_icon.py  build_mac.sh  install_ffmpeg_tool.py  install_yolo11n.py  pyi_rthook_cwd.py  test_render.sh
SuperBirdStamp/templates/: default.json
SuperBirdStamp/tests/: test_config_paths.py  test_crop_bird_center.py  test_crop_focus_center.py  test_crop_image_center.py  test_decode_image_for_preview.py  test_dejitter.py  test_discover.py  test_edit_modes.py  test_editor_photo_list_navigation_compat.py  test_editor_photo_list_sort.py  test_editor_preview_grid.py  test_editor_selection_preview.py  (+15 more)
(+140 files in other folders)
